<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="266dp"
        android:fontFamily="@font/roboto"
        android:text="@string/register_string"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="50dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto"
        android:hint="@string/user_name"
        android:textColorHint="@color/text_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/text_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameField" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:password="true"
        android:textColorHint="@color/text_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <Button
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/button"
        android:fontFamily="@font/roboto"
        android:text="@string/register"
        android:textAllCaps="false"
        android:onClick="registerButtonPush"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

</android.support.constraint.ConstraintLayout>